force-app/main/default/objects/Sample_Order_Family_Config__mdt/Sample_Order_Family_Config__mdt.object-meta.xml
<CustomObject>
    <label>Sample Order Family Config</label>
    <pluralLabel>Sample Order Family Configs</pluralLabel>
</CustomObject>