force-app/main/default/objects/Sample_Order_Family_Config__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>