force-app/main/default/objects/Sample_Order_Family_Config__mdt/fields/Parent_Family__c.field-meta.xml
<CustomField>
    <fullName>Parent_Family__c</fullName>
    <label>Parent Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>