force-app/main/default/objects/Sample_Order_Family_Config__mdt/fields/Qty_Limit_Per_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Qty_Limit_Per_Order_Line__c</fullName>
    <label>Qty Limit Per Order Line</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>